# miz-jam-1

./: Cargo.toml
src/: animation.rs  constants.rs  environment.rs  event.rs  grid.rs  level.rs  main.rs  rect.rs  tile.rs  update.rs
src/action/: attack.rs  mod.rs
src/entity/: environment.rs  instance.rs  mod.rs  movement.rs
src/shaders/: frag.spv  shader.frag.glsl  shader.vert.glsl  vert.spv
src/tile/: grid.rs  mod.rs  tile.rs
